scripts/nullness/annotator/url7f43a4752f_shalynnho_pokemonfactory_tgz-pJ8-Networking_ServerJ8.txt
../annotator/url7f43a4752f_shalynnho_pokemonfactory_tgz-pJ8-Networking_ServerJ8/src/agent/test/V0_JUnit_ConveyorAgent_Test_NormativeScenario.java:19: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url7f43a4752f_shalynnho_pokemonfactory_tgz-pJ8-Networking_ServerJ8/src/agent/test/V1_JUnit_FCS_Test_Normative.java:36: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url7f43a4752f_shalynnho_pokemonfactory_tgz-pJ8-Networking_ServerJ8/src/agent/test/V0_JUnit_StandAgent_Test_NormativeScenario.java:20: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url7f43a4752f_shalynnho_pokemonfactory_tgz-pJ8-Networking_ServerJ8/src/agent/test/V0_JUnit_KitRobotAgent_Test_NormativeScenario.java:23: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url7f43a4752f_shalynnho_pokemonfactory_tgz-pJ8-Networking_ServerJ8/src/agent/test/V0_JUnit_PartsRobotAgent_CameraAgent_Test_NormativeScenario.java:20: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url7f43a4752f_shalynnho_pokemonfactory_tgz-pJ8-Networking_ServerJ8/src/agent/test/V0_JUnit_ConveyorAgent_Test_NormativeScenario.java:35: error: cannot find symbol
	@Initializer @Override
	 ^
  symbol:   class Initializer
  location: class V0_JUnit_ConveyorAgent_Test_NormativeScenario
../annotator/url7f43a4752f_shalynnho_pokemonfactory_tgz-pJ8-Networking_ServerJ8/src/agent/test/V1_JUnit_FCS_Test_Normative.java:57: error: cannot find symbol
	@Initializer @Override
	 ^
  symbol:   class Initializer
  location: class V1_JUnit_FCS_Test_Normative
../annotator/url7f43a4752f_shalynnho_pokemonfactory_tgz-pJ8-Networking_ServerJ8/src/agent/test/V0_JUnit_StandAgent_Test_NormativeScenario.java:40: error: cannot find symbol
	@Initializer @Override
	 ^
  symbol:   class Initializer
  location: class V0_JUnit_StandAgent_Test_NormativeScenario
../annotator/url7f43a4752f_shalynnho_pokemonfactory_tgz-pJ8-Networking_ServerJ8/src/agent/test/V0_JUnit_KitRobotAgent_Test_NormativeScenario.java:42: error: cannot find symbol
	@Initializer @Override
	 ^
  symbol:   class Initializer
  location: class V0_JUnit_KitRobotAgent_Test_NormativeScenario
../annotator/url7f43a4752f_shalynnho_pokemonfactory_tgz-pJ8-Networking_ServerJ8/src/agent/test/V0_JUnit_PartsRobotAgent_CameraAgent_Test_NormativeScenario.java:43: error: cannot find symbol
	@Initializer @Override
	 ^
  symbol:   class Initializer
  location: class V0_JUnit_PartsRobotAgent_CameraAgent_Test_NormativeScenario
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
10 errors
